gateway-svc/manifests/service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  type: ClusterIP
  ports:
    - name: gateway
      protocol: TCP
      port: 8080
      targetPort: 8080
---
